name:                snappy-framed
version:             0.1.0.0
synopsis:            Decompression for framed Snappy streams
description:         Please see README.md
homepage:            http://github.com/asayers/snappy-framed#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Sayers
maintainer:          alex.sayers@gmail.com
copyright:           2016 Alex Sayers
category:            Codec
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Codec.Compression.Snappy.Framed
      Codec.Compression.Snappy.Framed.Comment43
      Codec.Compression.Snappy.Framed.Framing1
      Codec.Compression.Snappy.Framed.Framing2
      Codec.Compression.Snappy.Framed.NoFraming
      Codec.Compression.Snappy.Framed.SNZip
      Codec.Compression.Snappy.Framed.SnappyInJava
      Codec.Compression.Snappy.Framed.SnappyJava
  other-modules:
  build-depends:
        base >= 4.8 && < 5
      , attoparsec
      , attoparsec-binary
      , bytestring
      , pipes
      , pipes-attoparsec
      , snappy
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite snappy-framed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , snappy-framed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asayers/snappy-framed
